--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -30,4 +30,10 @@
 			<li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
 		{% endfor %}
 	</ul>
+  <h2>Recent Stuff</h2>
+	<ul>
+		{% for entry in craft.entries.section('stuff').limit(5).find() %}
+			<li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
+		{% endfor %}
+	</ul>
 {% endblock %}
