--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -23,7 +23,7 @@
 			        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 		}
 
-		#header, #footer { display: block; color: #fff; background: #da5a47; }
+		#header, #footer { display: block; color: #fff; background: #06BFD8; }
 		#header a, #footer a { color: #fff; }
 		#header { border-radius: 7px 7px 0 0; padding: 25px; }
 		#header:after { content: '.'; display: block; height: 0; clear: both; visibility: hidden; }
@@ -39,7 +39,7 @@
 
 		#content { display: block; padding: 25px; background: #fff; }
 		#content h1 { margin-top: 0; font-size: 35px; font-weight: bold; }
-		#content a { color: #da5a47; text-decoration: none; }
+		#content a { color: #06BFD8; text-decoration: none; }
 		#content a:hover { text-decoration: underline; }
 
 		#footer { border-radius: 0 0 7px 7px; padding: 15px; font-size: 12px; text-align: center; }
@@ -50,12 +50,15 @@
 	<div id="container">
 		<header id="header">
 			<h1><a href="{{ siteUrl }}">{{ siteName }}</a></h1>
+      <br><br>
 
 			<nav>
 				<ul>
+          <li><a href="{{ url('about-us') }}">About Us</a></li>
 					<li><a href="{{ url('news') }}" {% if craft.request.firstSegment == 'news' %}class="active"{% endif %}>News</a></li>
           <li><a href="{{ url('stuff') }}" {% if craft.request.firstSegment == 'stuff' %}class="active"{% endif %}>Stuff</a></li>
 				</ul>
+        <br><br>
 			</nav>
 		</header>
 
