--- a/craft/templates/about-us.html
+++ b/craft/templates/about-us.html
@@ -2,15 +2,6 @@
  # About Us template
  # ------------
  #
- # This template is loaded whenever Craft cannot figure out how to
- # respond to an incoming request. No setup is involved to get your
- # 404 page working; you just need to call it 404.html and put it
- # at the root of your craft/templates/ folder.
- #
- # You can also create 400.html, 403.html, 500.html, and 503.html
- # templates if you’d like. If Craft can’t find an error template
- # to match the error code, it will just use the one in
- # craft/app/templates/ instead.
  #
  # See this page for more details on how Craft routes requests:
  # http://craftcms.com/docs/routing
@@ -20,7 +11,11 @@
 {% set title = "About Us" %}
 
 {% block content %}
+
 	<h1>About Us</h1>
 
 	<p>We do things.</p>
+  <p>so many things.</p>
+  <p>All the time.</p>
+
 {% endblock %}
