--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -30,7 +30,7 @@
 			<li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
 		{% endfor %}
 	</ul>
-  <h2>Recent Stuff</h2>
+  <h2>Recent Stuff!</h2>
 	<ul>
 		{% for entry in craft.entries.section('stuff').limit(5).find() %}
 			<li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
